# c-raw-tcp-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_run.sh  run_app.sh
include/: tcp.h  tool.h  utils.h
src/: main.c  tcp.c  tool.c  utils.c
test/: test.c  test.py
